tests/snapshots/examples_fixtures/type_system__failing__112_keyword_alias_def.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/112_keyword_alias_def.flx
== compile ==
failed (parse)
== diagnostics ==
error[E030]: Unknown Keyword

Unknown keyword `def`. Flux uses `fn` for function declarations.

  examples/type_system/failing/112_keyword_alias_def.flx:33:1
   |
33 | def add(a: Int, b: Int) -> Int {
   | ^^^

Hint:
  Did you mean `fn`?


error[E031]: Expected Expression

Expected expression, found `->`.

  examples/type_system/failing/112_keyword_alias_def.flx:33:25
   |
33 | def add(a: Int, b: Int) -> Int {
   |                         ^^

Found 2 errors.
== stdout ==
<not executed>
